--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-redis": "^3.4.0",
     "express": "^4.16.4",
-    "node-fetch": "^2.2.0"
+    "express-session": "^1.15.6",
+    "node-fetch": "^2.2.0",
+    "redis": "^2.8.0"
   }
 }
